<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="fr.supinternet.slike.MainActivity">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <EditText
            android:id="@+id/form_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/form_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loginInput"
        android:text="@string/form_login" />



    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:visibility="gone" />


</LinearLayout>


